# hcal

./: .gitignore  .pylintrc  Dockerfile  README.md  hcal  hcal_holidays.py  hcal_util.py  issue_spring_day.md  pyproject.toml  test_hcal.py  test_hcal_holidays.py
.github/workflows/: pylint.yml
man/man1/: hcal.1
tests/: hcal_test_base.py  test_2007_transition.py  test_constants.py  test_hcal.py  test_hcal_after_option.py  test_hcal_autumnal_equinox_day.py  test_hcal_before_option.py  test_hcal_coming_of_age_day.py  test_hcal_culture_day.py  test_hcal_flags.py  test_hcal_holiday_color.py  test_hcal_holidays.py  test_hcal_julian.py  test_hcal_mountain_day.py  test_hcal_national_foundation_day.py  test_hcal_respect_for_the_aged_day.py  test_hcal_sea_day.py  test_hcal_sports_day.py  test_hcal_three_months.py  test_hcal_util.py  test_hcal_vernal_equinox_day.py  test_hcal_y_option.py
