[project]
name = "hcal"
version = "1.0.0"
description = "A simple command-line calendar utility"
authors = [
    { name = "Xiaolei Li" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"

keywords = ["calendar", "cli", "terminal", "utility"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

[project.urls]
Repository = "https://github.com/lxlgarnett/hcal"
